Fix drawer spacing issue on last yarn (#712)
Fixes #708

Reviewed-on: https://git.mills.io/yarnsocial/yarn/pulls/712
Co-committed-by: Phil S. <ullarah@noreply@mills.io>

--- a/internal/theme/static/css/99-yarn.css
+++ b/internal/theme/static/css/99-yarn.css
@@ -736,7 +736,7 @@ pre {
 }
 
 #postbox.drawer {
-  margin: -0.9rem 0.5rem 0 0.5rem;
+  margin: -0.9rem 0.5rem 1rem 0.5rem;
   padding-top: 0.7rem;
   background-color: var(--form-element-background-color);
   padding-bottom: 0.35rem;
@@ -824,7 +824,7 @@ pre {
   }
 
   #postbox.drawer {
-    margin: -0.9rem 0.25rem 0 0.25rem;
+    margin: -0.9rem 0.25rem 1rem 0.25rem;
   }
 
   .twt-nav {
@@ -913,7 +913,7 @@ pre {
   }
 
   nav.pagination-nav:nth-of-type(2) {
-    margin: -1rem 1rem 0.25rem 1rem;
+    margin: -1rem 1rem -1.25rem 1rem;
   }
 
   nav.pagination-nav {
@@ -1062,7 +1062,7 @@ pre {
   }
 
   nav.pagination-nav:nth-of-type(2) {
-    margin: -1rem 1rem -1.5rem 1rem;
+    margin: -1rem 1rem -2.5rem 1rem;
   }
 
   .container article.container-fluid:last-child {
@@ -1087,7 +1087,7 @@ pre {
   }
 
   nav.pagination-nav:nth-of-type(2) {
-    margin: -1rem 1rem -2rem 1rem;
+    margin: -1rem 1rem -3.25rem 1rem;
   }
 
   .container article.container-fluid:last-child {
@@ -1112,6 +1112,6 @@ pre {
   }
 
   nav.pagination-nav:nth-of-type(2) {
-    margin: -1rem 1rem -2.5rem 1rem;
+    margin: -1rem 1rem -4rem 1rem;
   }
 }
